Prevent corner from showing behind contents-actions radius

--- a/symphony/assets/css/src/symphony.drawers.less
+++ b/symphony/assets/css/src/symphony.drawers.less
@@ -45,7 +45,7 @@ div.drawer.horizontal {
 			overflow: scroll;
 			-webkit-overflow-scrolling: touch;
 			position: absolute;
-			top: 0;
+			top: var(--spacing-thinner);
 			bottom: 0;
 			background: var(--sidebar-background-color);
 			width: var(--dimension-tinier);
